[gd_scene load_steps=8 format=3 uid="uid://5ktej830tjcd"]

[ext_resource type="Script" uid="uid://dv7qapvwjovnj" path="res://assets/scripts/space_ship/objects/base_button.gd" id="1_in78u"]
[ext_resource type="Texture2D" uid="uid://cbfda274vq87a" path="res://assets/sprites/map/objects/buttons/button_up_highlighted.png" id="2_vnquy"]
[ext_resource type="Texture2D" uid="uid://5fef46gxewot" path="res://assets/sprites/map/objects/buttons/button_up.png" id="3_5v6b7"]
[ext_resource type="Texture2D" uid="uid://coqsb1ihuwl4n" path="res://assets/sprites/map/objects/buttons/button_pressed.png" id="4_ts73n"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ndrk1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vnquy")
}],
"loop": true,
"name": &"highlighted",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_5v6b7")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ts73n")
}],
"loop": true,
"name": &"pressed",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1fulg"]
size = Vector2(103, 102.333336)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0j08y"]
size = Vector2(56, 52)

[node name="GrayButton" type="Area2D" groups=["Button", "Yellow"]]
script = ExtResource("1_in78u")
color = "Gray"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_ndrk1")
animation = &"pressed"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 20)
scale = Vector2(0.75, 0.75)
shape = SubResource("RectangleShape2D_1fulg")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 19.5)
scale = Vector2(0.75, 0.75)
shape = SubResource("RectangleShape2D_0j08y")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
